--- a/members/ruinan/index.html
+++ b/members/ruinan/index.html
@@ -32,8 +32,8 @@
 		<a href="/members/ruinan/nativedialogs.html">Native Dialogs</a> |
 		<a href="/members/ruinan/customdialogs.html">Custom Dialogs</a> |
 		<a href="/members/ruinan/crud.html">CRUD</a> |
-		<a href="/members/ruinan/styledcrud.html">Styled CRUD</a>
-		<a href="/members/ruinan/methodtest.html">Method Test</a>
+		<a href="/members/ruinan/styledcrud.html">Styled CRUD</a> |
+		<a href="/members/ruinan/methodtest.html">Method Test</a> |
 		<a href="/members/ruinan/webcomponent.html">Web Component</a>
 	</div>
 	<header id="top-header">
