fix will's urls, add README

--- a/members/will_luo/contact.html
+++ b/members/will_luo/contact.html
@@ -41,13 +41,13 @@
     <header>
         <nav>
             <ul class="navLinks">
-                <li><a href="/index.html">Will's Website!</a></li>
-                <li><a href="/Projects.html">My Project</a></li>
-                <li><a href="/Interest.html">My Interests</a></li>
-                <li><a href="/styledcrud.html">My Posts</a></li>
-                <li><a href="/Contact.html">Contact Me!</a></li>
-                <li><a href="/methodtest.html">MethodTest</a></li>
-                <li><a href="/webcomponent.html">Web Component</a></li>
+                <li><a href="/members/will_luo/index.html">Will's Website!</a></li>
+                <li><a href="/members/will_luo/projects.html">My Project</a></li>
+                <li><a href="/members/will_luo/interest.html">My Interests</a></li>
+                <li><a href="/members/will_luo/styledcrud.html">My Posts</a></li>
+                <li><a href="/members/will_luo/contact.html">Contact Me!</a></li>
+                <li><a href="/members/will_luo/methodtest.html">MethodTest</a></li>
+                <li><a href="/members/will_luo/webcomponent.html">Web Component</a></li>
             </ul>
         </nav>
         <h1 id="mainTitle">Contact me!</h1>
