fix small bugs for will page url

--- a/members/will_luo/methodtest.html
+++ b/members/will_luo/methodtest.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav>
-        <a href="members/will_luo/index.html">Home</a>
+        <a href="/members/will_luo/index.html">Home</a>
     </nav>
     <!--  method="post" action="https://httpbin.org/post" -->
     <form id="form_">
