--- a/members/will_luo/webcomponent.html
+++ b/members/will_luo/webcomponent.html
@@ -26,7 +26,7 @@
 
 <body>
     <nav>
-        <a href="members/will_luo/index.html">Home</a>
+        <a href="/members/will_luo/index.html">Home</a>
     </nav>
     <button-count img="img/alt.png"
         data-text="Your card validation code (CVC) is an extra security feature — it is the last 3 or 4 numbers on the back of your card.">Times
