haochen website change

--- a/members/haochen/index.html
+++ b/members/haochen/index.html
@@ -52,46 +52,32 @@
 
 <body>
     <h1>Haochen Jiang</h1>
-    <img src="myphoto.jpg" alt="Your Name" class="profile">
+    <img src="myphoto.jpg" alt="MYPROFILE" class="profile">
     <h2>Contact Information</h2>
     <ul>
         <li>Email: haj003@ucsd.edu</li>
         <li>Phone: (858) 405-0805</li>
         <li>LinkedIn: https://www.linkedin.com/in/haochen-jiang-743b6824a/</li>
     </ul>
-
+    
     <div class="section">
-        <h2>Career Objective</h2>
-        <p>Write a brief description of your career objectives here.</p>
+        <h2>Education</h2>
+        <h3>BS. Computer Engineering</h3>
+        <h4>University of California, San Diego</h4>
+        <h4>Graduate in 2025</h4>
     </div>
 
     <div class="section">
-        <h2>Skills</h2>
+        <h2>Course Work</h2>
         <ul>
-            <li>Skill 1</li>
-            <li>Skill 2</li>
-            <li>Skill 3</li>
-        </ul>
-    </div>
-
-    <div class="section">
-        <h2>Work Experience</h2>
-        <h3>Job Title 1</h3>
-        <h4>Company Name, City, Country</h4>
-        <h4>Dates of Employment</h4>
-        <ul>
-            <li>Job Responsibility 1</li>
-            <li>Job Responsibility 2</li>
-            <li>Job Responsibility 3</li>
-        </ul>
-
-        <h3>Job Title 2</h3>
-        <h4>Company Name, City, Country</h4>
-        <h4>Dates of Employment</h4>
-        <ul>
-            <li>Job Responsibility 1</li>
-            <li>Job Responsibility 2</li>
-            <li>Job Responsibility 3</li>
+            <li>CSE 100. Advanced Data Structures</li>
+            <li>CSE 101. Design and Analysis of Algorithms</li>
+            <li>CSE 110. Software Engineering</li>
+            <li>CSE 120. Principles of Computer Operating Systems</li>
+            <li>CSE 135. Online Database Analytics Applications </li>
+            <li>CSE 140. Components and Design Techniques for Digital Systems</li>
+            <li>CSE 140L. Digital Systems Laboratory</li>
+            <li>CSE 150B. Introduction to Artificial Intelligence: Search and Reasoning</li>
         </ul>
     </div>
 
