haochen website change html css js

--- a/members/haochen/index.html
+++ b/members/haochen/index.html
@@ -5,33 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Name - CV</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-        }
-
-        h1,
-        h2,
-        h3 {
-            color: #333;
-        }
-
-        ul {
-            list-style: none;
-            padding: 0;
-        }
-
-        img.profile {
-            width: 150px;
-            height: auto;
-            border-radius: 50%;
-        }
-
-        .section {
-            margin-bottom: 2rem;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
     <!-- Matomo -->
     <script>
         var _paq = window._paq = window._paq || [];
@@ -63,8 +37,10 @@
     <div class="section">
         <h2>Education</h2>
         <h3>BS. Computer Engineering</h3>
-        <h4>University of California, San Diego</h4>
-        <h4>Graduate in 2025</h4>
+        <div class="section-content">
+            <h4>University of California, San Diego</h4>
+            <h4>Graduate in 2025</h4>
+        </div>
     </div>
 
     <div class="section">
@@ -87,6 +63,7 @@
         <h4>University of California, San Diego</h4>
         <h4>Graduate in 2025</h4>
     </div>
+    <script src="scripts.js"></script>
 </body>
 
 </html>
