--- a/members/haochen/index.html
+++ b/members/haochen/index.html
@@ -36,7 +36,7 @@
     
     <div class="section">
         <h2>Education</h2>
-        <h3>BS. Computer Engineering</h3>
+        <h3>BS. Computer Engineering (Click for more information)</h3>
         <div class="section-content">
             <h4>University of California, San Diego</h4>
             <h4>Graduate in 2025</h4>
@@ -56,13 +56,7 @@
             <li>CSE 150B. Introduction to Artificial Intelligence: Search and Reasoning</li>
         </ul>
     </div>
-
-    <div class="section">
-        <h2>Education</h2>
-        <h3>BS. Computer Engineering</h3>
-        <h4>University of California, San Diego</h4>
-        <h4>Graduate in 2025</h4>
-    </div>
+    
     <script src="scripts.js"></script>
 </body>
 
