--- a/members/haochen/index.html
+++ b/members/haochen/index.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - CV</title>
+    <title>Haochen's Site</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="favicon_io/favicon.ico">
+
     <!-- Matomo -->
     <script>
         var _paq = window._paq = window._paq || [];
@@ -31,7 +33,7 @@
     <ul>
         <li>Email: haj003@ucsd.edu</li>
         <li>Phone: (858) 405-0805</li>
-        <li>LinkedIn: https://www.linkedin.com/in/haochen-jiang-743b6824a/</li>
+        <li>LinkedIn: <a href="https://www.linkedin.com/in/haochen-jiang-743b6824a/">https://www.linkedin.com/in/haochen-jiang-743b6824a/</a> </li>
     </ul>
     
     <div class="section">
