minor text update for haochen website

--- a/members/haochen/index.html
+++ b/members/haochen/index.html
@@ -31,7 +31,7 @@
     <img src="myphoto.jpg" alt="MYPROFILE" class="profile">
     <h2>Contact Information</h2>
     <ul>
-        <li>Email: jianghaochen708@outlook.com</li>
+        <li>Email: haj003@ucsd.edu</li>
         <li>Phone: (858) 405-0805</li>
         <li>LinkedIn: https://www.linkedin.com/in/haochen-jiang-743b6824a/</li>
     </ul>
