updated main page

--- a/index.html
+++ b/index.html
@@ -63,7 +63,101 @@
         </ul>
 
         <h2 class="hw-title">Homework 2</h2>
-        <div class="hw-content">TBA</div>
+        <div class="hw-content">
+            <table>
+                <tr>
+                    <th>CGI - Perl</th>
+                    <th>CGI - C</th>
+                    <th>CGI - Golang</th>
+                </tr>
+                <tr>
+                    <td>
+                        <ul>
+                            <li>
+                                <a href="/cgi-bin/perl-html-world.pl">Hello Perl!</a>
+                            </li>
+                            <li>
+                                <a href="/cgi-bin/perl-json-world.pl">Hello Perl!(JSON)</a>
+                            </li>
+                            <li>
+                                <a href="/cgi-bin/perl-env.pl">Environment Variables</a>
+                            </li>
+                            <li>
+                                <a href="/cgi-bin/perl-env-pm.pl">Environment Variables PM</a>
+                            </li>
+                            <li>
+                                <a href="/cgi-bin/perl-get-echo.pl">GET Echo</a>
+                            </li>
+                            <li>
+                                <a href="/cgi-bin/perl-post-echo.pl">POST Echo</a>
+                            </li>
+                            <li>
+                                <a href="/cgi-bin/perl-general-echo.pl">General Echo</a>
+                            </li>
+                            <li>
+                                <a href="/cgi-form/perl-cgiform.html">Sessioning</a>
+                            </li>
+                        </ul>
+                    </td>
+                    <td>
+                        <ul>
+                            <li>
+                                <a href="/cgi-bin/c-html-world">Hello C!</a>
+                            </li>
+                            <li>
+                                <a href="/cgi-bin/c-json-world">Hello C!(JSON)</a>
+                            </li>
+                            <li>
+                                <a href="/cgi-bin/c-env">Environment Variables</a>
+                            </li>
+                            <li>
+                                <a href="/cgi-bin/c-env-pm">Environment Variables PM</a>
+                            </li>
+                            <li>
+                                <a href="/cgi-bin/c-get-echo">GET Echo</a>
+                            </li>
+                            <li>
+                                <a href="/cgi-bin/c-post-echo">POST Echo</a>
+                            </li>
+                            <li>
+                                <a href="/cgi-bin/c-general-echo">General Echo</a>
+                            </li>
+                            <li>
+                                <a href="/cgi-form/c-cgiform.html">Sessioning</a>
+                            </li>
+                        </ul>
+                    </td>
+                    <td>
+                        <ul>
+                            <li>
+                                <a href="/cgi-bin/go-html-world">Hello Golang!</a>
+                            </li>
+                            <li>
+                                <a href="/cgi-bin/go-json-world">Hello Golang!(JSON)</a>
+                            </li>
+                            <li>
+                                <a href="/cgi-bin/go-env">Environment Variables</a>
+                            </li>
+                            <li>
+                                <a href="/cgi-bin/go-env-pm">Environment Variables PM</a>
+                            </li>
+                            <li>
+                                <a href="/cgi-bin/go-get-echo">GET Echo</a>
+                            </li>
+                            <li>
+                                <a href="/cgi-bin/go-post-echo">POST Echo</a>
+                            </li>
+                            <li>
+                                <a href="/cgi-bin/go-general-echo">General Echo</a>
+                            </li>
+                            <li>
+                                <a href="/cgi-form/go-cgiform.html">Sessioning</a>
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
+            </table>
+        </div>
         <h2 class="hw-title">Homework 3</h2>
         <div class="hw-content">TBA</div>
         <h2 class="hw-title">Homework 4</h2>
