--- a/cgi-form/c-cgiform.html
+++ b/cgi-form/c-cgiform.html
@@ -8,13 +8,13 @@
 <body>
   <h1 align="center">Session Test</h1>
   <hr>
-  <label for="cgi-lang">CGI using Perl</label>
-  <form action="/cgi-bin/perl-sessions-1.pl" method="Post" id="form">
+  <label for="cgi-lang">CGI using C</label>
+  <form action="../cgi-bin/c-sessions-1.cgi" method="Post" id="form">
     <label>What is your name? <input type="text" name="username" autocomplete="off"></label>
     <br>
     <input type="submit" value="Test Sessioning">
   </form>
-  
+
   <a href="/" style="display:inline-block;margin-top:20px;">Home</a> 
 
 </body>
