--- a/index.html
+++ b/index.html
@@ -102,25 +102,22 @@
                     <td>
                         <ul>
                             <li>
-                                <a href="/cgi-bin/c-html-world">Hello C!</a>
+                                <a href="/cgi-bin/c-hello-html-world.cgi">Hello C!</a>
                             </li>
                             <li>
-                                <a href="/cgi-bin/c-json-world">Hello C!(JSON)</a>
+                                <a href="/cgi-bin/c-hello-json-world.cgi">Hello C!(JSON)</a>
                             </li>
                             <li>
-                                <a href="/cgi-bin/c-env">Environment Variables</a>
+                                <a href="/cgi-bin/c-env.cgi">Environment Variables</a>
                             </li>
                             <li>
-                                <a href="/cgi-bin/c-env-pm">Environment Variables PM</a>
+                                <a href="/cgi-bin/c-get-echo.cgi">GET Echo</a>
                             </li>
                             <li>
-                                <a href="/cgi-bin/c-get-echo">GET Echo</a>
+                                <a href="/cgi-bin/c-post-echo.cgi">POST Echo</a>
                             </li>
                             <li>
-                                <a href="/cgi-bin/c-post-echo">POST Echo</a>
-                            </li>
-                            <li>
-                                <a href="/cgi-bin/c-general-echo">General Echo</a>
+                                <a href="/cgi-bin/c-general-request-echo.cgi">General Echo</a>
                             </li>
                             <li>
                                 <a href="/cgi-form/c-cgiform.html">Sessioning</a>
