golang link fixed

--- a/index.html
+++ b/index.html
@@ -127,25 +127,25 @@
                     <td>
                         <ul>
                             <li>
-                                <a href="/cgi-bin/go-html-world">Hello Golang!</a>
+                                <a href="/cgi-bin/go-hello-html-world.cgi">Hello Go!</a>
                             </li>
                             <li>
-                                <a href="/cgi-bin/go-json-world">Hello Golang!(JSON)</a>
+                                <a href="/cgi-bin/go-json-world.cgi">Hello Go!(JSON)</a>
                             </li>
                             <li>
-                                <a href="/cgi-bin/go-env">Environment Variables</a>
+                                <a href="/cgi-bin/go-env.cgi">Environment Variables</a>
                             </li>
                             <li>
-                                <a href="/cgi-bin/go-env-pm">Environment Variables PM</a>
+                                <a href="/cgi-bin/go-env-pm.cgi">Environment Variables PM</a>
                             </li>
                             <li>
-                                <a href="/cgi-bin/go-get-echo">GET Echo</a>
+                                <a href="/cgi-bin/go-get-echo.cgi">GET Echo</a>
                             </li>
                             <li>
-                                <a href="/cgi-bin/go-post-echo">POST Echo</a>
+                                <a href="/cgi-bin/go-post-echo.cgi">POST Echo</a>
                             </li>
                             <li>
-                                <a href="/cgi-bin/go-general-echo">General Echo</a>
+                                <a href="/cgi-bin/go-general-echo.cgi">General Echo</a>
                             </li>
                             <li>
                                 <a href="/cgi-form/go-cgiform.html">Sessioning</a>
