--- a/index.html
+++ b/index.html
@@ -152,6 +152,32 @@
                             </li>
                         </ul>
                     </td>
+                    <td>
+                        <ul>
+                            <li>
+                                <a href="/cgi-bin/py-hello-html-world.cgi">Hello Python!</a>
+                            </li>
+                            <li>
+                                <a href="/cgi-bin/py-hello-json-world.cgi">Hello Python!(JSON)</a>
+                            </li>
+                            <li>
+                                <a href="/cgi-bin/py-environment.cgi">Environment Variables</a>
+                            </li>
+                            <li>
+                                <a href="/cgi-bin/py-get-echo.cgi">GET Echo</a>
+                            </li>
+                            <li>
+                                <a href="/cgi-bin/py-post-echo.cgi">POST Echo</a>
+                            </li>
+                            <li>
+                                <a href="/cgi-bin/py-general-request-echo.cgi">General Echo</a>
+                            </li>
+                            <li>
+                                <a href="/cgi-form/py-cgiform.html">Sessioning</a>
+                            </li>
+                        </ul>
+                    </td>
+
                 </tr>
             </table>
         </div>
