--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                     <th>CGI - Perl</th>
                     <th>CGI - C</th>
                     <th>CGI - Golang</th>
+                    <th>CGI - Python</th>
                 </tr>
                 <tr>
                     <td>
