--- a/index.html
+++ b/index.html
@@ -156,22 +156,22 @@
                     <td>
                         <ul>
                             <li>
-                                <a href="/cgi-bin/py-hello-html-world.cgi">Hello Python!</a>
+                                <a href="/cgi-bin/py-hello-html-world.py">Hello Python!</a>
                             </li>
                             <li>
-                                <a href="/cgi-bin/py-hello-json-world.cgi">Hello Python!(JSON)</a>
+                                <a href="/cgi-bin/py-hello-json-world.py">Hello Python!(JSON)</a>
                             </li>
                             <li>
-                                <a href="/cgi-bin/py-environment.cgi">Environment Variables</a>
+                                <a href="/cgi-bin/py-environment.py">Environment Variables</a>
                             </li>
                             <li>
-                                <a href="/cgi-bin/py-get-echo.cgi">GET Echo</a>
+                                <a href="/cgi-bin/py-get-echo.py">GET Echo</a>
                             </li>
                             <li>
-                                <a href="/cgi-bin/py-post-echo.cgi">POST Echo</a>
+                                <a href="/cgi-bin/py-post-echo.py">POST Echo</a>
                             </li>
                             <li>
-                                <a href="/cgi-bin/py-general-request-echo.cgi">General Echo</a>
+                                <a href="/cgi-bin/py-general-request-echo.py">General Echo</a>
                             </li>
                             <li>
                                 <a href="/cgi-form/py-cgiform.html">Sessioning</a>
