--- a/cgi-form/py-cgiform.html
+++ b/cgi-form/py-cgiform.html
@@ -9,7 +9,7 @@
   <h1 align="center">Session Test</h1>
   <hr>
   <label for="cgi-lang">CGI using Python</label>
-  <form action="../cgi-bin/py-sessions-1.cgi" method="Post" id="form">
+  <form action="../cgi-bin/py-sessions-1.py" method="Post" id="form">
     <label>What is your name? <input type="text" name="username" autocomplete="off"></label>
     <br>
     <input type="submit" value="Test Sessioning">
