add empty file and test hello-world.php

--- a/index.html
+++ b/index.html
@@ -178,6 +178,31 @@
                             </li>
                         </ul>
                     </td>
+                    <td>
+                        <ul>
+                            <li>
+                                <a href="/cgi-bin/php-hello-html-world.php">Hello Python!</a>
+                            </li>
+                            <li>
+                                <a href="/cgi-bin/php-hello-json-world.php">Hello Python!(JSON)</a>
+                            </li>
+                            <li>
+                                <a href="/cgi-bin/php-environment.php">Environment Variables</a>
+                            </li>
+                            <li>
+                                <a href="/cgi-bin/php-get-echo.php">GET Echo</a>
+                            </li>
+                            <li>
+                                <a href="/cgi-bin/php-post-echo.php">POST Echo</a>
+                            </li>
+                            <li>
+                                <a href="/cgi-bin/php-general-request-echo.php">General Echo</a>
+                            </li>
+                            <li>
+                                <a href="/cgi-form/php-cgiform.html">Sessioning</a>
+                            </li>
+                        </ul>
+                    </td>
 
                 </tr>
             </table>
