all php except sessions part

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                     <th>CGI - C</th>
                     <th>CGI - Golang</th>
                     <th>CGI - Python</th>
+                    <th>CGI - PHP</th>
                 </tr>
                 <tr>
                     <td>
