--- a/custom_404.html
+++ b/custom_404.html
@@ -55,6 +55,16 @@
     </script>
     <!-- End Matomo Code -->
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-E424BQ3Z5T"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-E424BQ3Z5T');
+    </script>
+
 </head>
 
 <body>
