--- a/cgi-form/perl-cgiform.html
+++ b/cgi-form/perl-cgiform.html
@@ -3,6 +3,15 @@
 
 <head>
   <title>CGI Form</title>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-E424BQ3Z5T"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-E424BQ3Z5T');
+  </script>
 </head>
 
 <body>
@@ -14,8 +23,8 @@
     <br>
     <input type="submit" value="Test Sessioning">
   </form>
-  
-  <a href="/" style="display:inline-block;margin-top:20px;">Home</a> 
+
+  <a href="/" style="display:inline-block;margin-top:20px;">Home</a>
 
 </body>
 
