--- a/cgi-form/py-cgiform.html
+++ b/cgi-form/py-cgiform.html
@@ -12,6 +12,9 @@
 
     gtag('config', 'G-E424BQ3Z5T');
   </script>
+
+  <script src="https://cdn.lr-ingest.com/LogRocket.min.js" crossorigin="anonymous"></script>
+  <script>window.LogRocket && window.LogRocket.init('uwaohc/cse135monster');</script>
 </head>
 
 <body>
