--- a/index.html
+++ b/index.html
@@ -195,10 +195,10 @@
                     <td>
                         <ul>
                             <li>
-                                <a href="/cgi-bin/php-hello-html-world.php">Hello Python!</a>
+                                <a href="/cgi-bin/php-hello-html-world.php">Hello PHP!</a>
                             </li>
                             <li>
-                                <a href="/cgi-bin/php-hello-json-world.php">Hello Python!(JSON)</a>
+                                <a href="/cgi-bin/php-hello-json-world.php">Hello PHP!(JSON)</a>
                             </li>
                             <li>
                                 <a href="/cgi-bin/php-environment.php">Environment Variables</a>
