add rust files, test rust-hello-world.rs

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
                     <th>CGI - Golang</th>
                     <th>CGI - Python</th>
                     <th>CGI - PHP</th>
+                    <th>CGI - Rust</th>
                 </tr>
                 <tr>
                     <td>
@@ -214,6 +215,31 @@
                             </li>
                             <li>
                                 <a href="/cgi-form/php-cgiform.html">Sessioning</a>
+                            </li>
+                        </ul>
+                    </td>
+                    <td>
+                        <ul>
+                            <li>
+                                <a href="/cgi-bin/rust-hello-html-world.rs">Hello Rust!</a>
+                            </li>
+                            <li>
+                                <a href="/cgi-bin/rust-hello-json-world.rs">Hello Rust!(JSON)</a>
+                            </li>
+                            <li>
+                                <a href="/cgi-bin/rust-environment.rs">Environment Variables</a>
+                            </li>
+                            <li>
+                                <a href="/cgi-bin/rust-get-echo.rs">GET Echo</a>
+                            </li>
+                            <li>
+                                <a href="/cgi-bin/rust-post-echo.rs">POST Echo</a>
+                            </li>
+                            <li>
+                                <a href="/cgi-bin/rust-general-request-echo.rs">General Echo</a>
+                            </li>
+                            <li>
+                                <a href="/cgi-form/rust-cgiform.html">Sessioning</a>
                             </li>
                         </ul>
                     </td>
