--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
                     <th>CGI - Python</th>
                     <th>CGI - PHP</th>
                     <th>CGI - Rust</th>
+                    <th>CGI - ColdFusion</th>
                 </tr>
                 <tr>
                     <td>
@@ -240,6 +241,33 @@
                             </li>
                         </ul>
                     </td>
+
+                    <td>
+                        <ul>
+                            <li>
+                                <a href="/cgi-bin/cfm-hello-html-world.cfm">Hello ColdFusion!</a>
+                            </li>
+                            <li>
+                                <a href="/cgi-bin/cfm-hello-json-world.cfm">Hello ColdFusion!(JSON)</a>
+                            </li>
+                            <li>
+                                <a href="/cgi-bin/cfm-environment.cfm">Environment Variables</a>
+                            </li>
+                            <li>
+                                <a href="/cgi-bin/cfm-get-echo.cfm">GET Echo</a>
+                            </li>
+                            <li>
+                                <a href="/cgi-bin/cfm-post-echo.cfm">POST Echo</a>
+                            </li>
+                            <li>
+                                <a href="/cgi-bin/cfm-general-request-echo.cfm">General Echo</a>
+                            </li>
+                            <li>
+                                <a href="/cgi-form/cfm-cgiform.html">Sessioning</a>
+                            </li>
+                        </ul>
+                    </td>
+
 
                 </tr>
             </table>
