change .rs to .cgi

--- a/index.html
+++ b/index.html
@@ -219,22 +219,22 @@
                     <td>
                         <ul>
                             <li>
-                                <a href="/cgi-bin/rust-hello-html-world">Hello Rust!</a>
+                                <a href="/cgi-bin/rust-hello-html-world.cgi">Hello Rust!</a>
                             </li>
                             <li>
-                                <a href="/cgi-bin/rust-hello-json-world.rs">Hello Rust!(JSON)</a>
+                                <a href="/cgi-bin/rust-hello-json-world.cgi">Hello Rust!(JSON)</a>
                             </li>
                             <li>
-                                <a href="/cgi-bin/rust-environment.rs">Environment Variables</a>
+                                <a href="/cgi-bin/rust-environment.cgi">Environment Variables</a>
                             </li>
                             <li>
-                                <a href="/cgi-bin/rust-get-echo.rs">GET Echo</a>
+                                <a href="/cgi-bin/rust-get-echo.cgi">GET Echo</a>
                             </li>
                             <li>
-                                <a href="/cgi-bin/rust-post-echo.rs">POST Echo</a>
+                                <a href="/cgi-bin/rust-post-echo.cgi">POST Echo</a>
                             </li>
                             <li>
-                                <a href="/cgi-bin/rust-general-request-echo.rs">General Echo</a>
+                                <a href="/cgi-bin/rust-general-request-echo.cgi">General Echo</a>
                             </li>
                             <li>
                                 <a href="/cgi-form/rust-cgiform.html">Sessioning</a>
