--- a/cgi-form/cfm-cgiform.html
+++ b/cgi-form/cfm-cgiform.html
@@ -21,11 +21,12 @@
   <h1 align="center">Session Test</h1>
   <hr>
   <label for="cgi-lang">CGI using ColdFusion</label>
-  <form action="../cgi-bin/cfm-sessions-1.cfm" method="Post" id="form">
+  <form action="../cgi-bin/cfm-sessions-1.cfm" method="get" id="form">
     <label>What is your name? <input type="text" name="username" autocomplete="off"></label>
     <br>
     <input type="submit" value="Test Sessioning">
-  </form>
+</form>
+
 
   <a href="/" style="display:inline-block;margin-top:20px;">Home</a>
 
