updated rust html

--- a/cgi-form/rust-cgiform.html
+++ b/cgi-form/rust-cgiform.html
@@ -19,8 +19,8 @@
 <body>
   <h1 align="center">Session Test</h1>
   <hr>
-  <label for="cgi-lang">CGI using Perl</label>
-  <form action="../cgi-bin/rust-sessions-1.rs" method="Post" id="form">
+  <label for="cgi-lang">CGI using Rust</label>
+  <form action="../cgi-bin/rust-sessions-1.cgi" method="Post" id="form">
     <label>What is your name? <input type="text" name="username" autocomplete="off"></label>
     <br>
     <input type="submit" value="Test Sessioning">
