--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles.css" type="text/css">
     <link rel="icon" href="favicon_io/favicon.ico">
     <title>CSE135 Website!</title>
-    <script src="collector.js" defer></script>
+    <script src="collector/collector.js" defer></script>
     <!-- Matomo -->
     <script>
         var _paq = window._paq = window._paq || [];
