--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles.css" type="text/css">
     <link rel="icon" href="favicon_io/favicon.ico">
     <title>CSE135 Website!</title>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="collector/collector.js" defer></script>
     <!-- Matomo -->
     <script>
