try to fix activityRecord

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <title>CSE135 Website!</title>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="collector/collector.js" defer></script>
+    <script>
+        console.log("Hello from index.html");
+    </script>
     <!-- Matomo -->
     <script>
         var _paq = window._paq = window._paq || [];
