--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" href="favicon_io/favicon.ico">
     <title>CSE135 Website!</title>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="collector/collector.js" defer></script>
+    <script src="collector/collector.js"></script>
     <script>
         console.log("Hello from index.html");
     </script>
