--- a/hellodataviz.html
+++ b/hellodataviz.html
@@ -22,7 +22,7 @@
             axios.get(`/api/static/`)
                 .then(response => {
                     console.log(response.data);
-                    let data = response.data[1];
+                    let data = response.data;
                     for(let i = 0; i < data.length; i++) {
                         let value = data[i];
                         if(value['userAgent'].includes('Chrome')) {
