--- a/hellodataviz.html
+++ b/hellodataviz.html
@@ -18,7 +18,7 @@
         <div id="js-enabled"></div>
         <div id="image-enabled"></div> -->
         <script>
-            let chrome_num = 0, firefox_num = 0, safari_num = 0, ie_num = 0, other_num = 0;
+            var chrome_num = 0, firefox_num = 0, safari_num = 0, ie_num = 0, other_num = 0;
             axios.get(`/api/static/`)
                 .then(response => {
                     console.log(response.data);
@@ -41,7 +41,7 @@
                 .catch(error => {
                     console.error('Error checking if record exists:', error);
                 });
-            let total_num = chrome_num + firefox_num + safari_num + ie_num + other_num;
+            var total_num = chrome_num + firefox_num + safari_num + ie_num + other_num;
 
             var myConfig = {
                 type: "pie",
@@ -127,6 +127,13 @@
                 id: 'userAgent',
                 data: myConfig,
               });
+
+              print("chrome_num: " + chrome_num);
+              print("firefox_num: " + firefox_num);
+              print("safari_num: " + safari_num);
+              print("ie_num: " + ie_num);
+              print("other_num: " + other_num);
+              print("total_num: " + total_num);
         </script>
         <!-- <script>
             var myConfig = {
