change to console.log

--- a/hellodataviz.html
+++ b/hellodataviz.html
@@ -128,12 +128,12 @@
                 data: myConfig,
               });
 
-              print("chrome_num: " + chrome_num);
-              print("firefox_num: " + firefox_num);
-              print("safari_num: " + safari_num);
-              print("ie_num: " + ie_num);
-              print("other_num: " + other_num);
-              print("total_num: " + total_num);
+              console.log("chrome_num: " + chrome_num);
+              console.log("firefox_num: " + firefox_num);
+              console.log("safari_num: " + safari_num);
+              console.log("ie_num: " + ie_num);
+              console.log("other_num: " + other_num);
+              console.log("total_num: " + total_num);
         </script>
         <!-- <script>
             var myConfig = {
