--- a/hellodataviz.html
+++ b/hellodataviz.html
@@ -19,7 +19,7 @@
         <div id="image-enabled"></div> -->
         <script>
             var chrome_num = 0, firefox_num = 0, safari_num = 0, ie_num = 0, other_num = 0;
-            axios.get(`/api/static/`)
+            await axios.get(`/api/static/`)
                 .then(response => {
                     console.log(response.data);
                     let data = response.data;
