handle noscript debug

--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
 </head>
 
 <body>
-    <noscript>
+    <!-- <noscript> -->
         <p>Your browser does not support JavaScript or JavaScript is disabled. Please enable JavaScript for a better experience.</p>
         <form id="form-noscript" action="/api/noscript" method="POST">
             <button type="submit">Submit Your Feedback!</button>
           </form>
-    </noscript>
+    <!-- </noscript> -->
 
     <main>
         <aside>
