--- a/index.html
+++ b/index.html
@@ -45,12 +45,13 @@
 </head>
 
 <body>
-    <!-- <noscript> -->
-        <p>Your browser does not support JavaScript or JavaScript is disabled. Please enable JavaScript for a better experience.</p>
+    <noscript>
+        <p>Your browser does not support JavaScript or JavaScript is disabled. Please enable JavaScript for a better
+            experience.</p>
         <form id="form-noscript" action="/api/noscript" method="POST">
             <button type="submit">Submit Your Feedback!</button>
-          </form>
-    <!-- </noscript> -->
+        </form>
+    </noscript>
 
     <main>
         <aside>
