--- a/index.html
+++ b/index.html
@@ -285,7 +285,18 @@
             </table>
         </div>
         <h2 class="hw-title">Homework 3</h2>
-        <div class="hw-content">TBA</div>
+        <div class="hw-content">
+            <table>
+                <ul>
+                    <li>
+                        <a href="/hellodataviz.html">Hello Data Viz</a>
+                    </li>
+                    <li>
+                        <a href="/database.html">Database Grid</a>
+                    </li>
+                </ul>
+            </table>
+        </div>
         <h2 class="hw-title">Homework 4</h2>
         <div class="hw-content">TBA</div>
 
