--- a/hellodataviz.html
+++ b/hellodataviz.html
@@ -507,17 +507,9 @@
                         let value = data[i];
                         // console.log("value" + value)
                         // console.log("value['userAgent']" + value['userAgent']);
-                        if(value['userAgent'].includes('Chrome')) {
-                            chrome_num++;
-                        } else if(value['userAgent'].includes('Firefox')) {
-                            firefox_num++;
-                        } else if(value['userAgent'].includes('Safari')) {
-                            safari_num++;
-                        } else if(value['userAgent'].includes('Internet Explorer')) {
-                            ie_num++;
-                        } else {
-                            other_num++;
-                        }
+                        start_load.append(value['pageStartLoad']);
+                        end_load.append(value['pageEndLoad']);
+                        total_time.append(value['totalLoadTime']);
                     }
 
 
@@ -612,48 +604,7 @@
                           }
                         },
                         "series": [{
-                            "values": [
-                              149.2,
-                              174.3,
-                              187.7,
-                              147.1,
-                              129.6,
-                              189.6,
-                              230,
-                              164.5,
-                              171.7,
-                              163.4,
-                              194.5,
-                              200.1,
-                              193.4,
-                              254.4,
-                              287.8,
-                              246,
-                              199.9,
-                              218.3,
-                              244,
-                              312.2,
-                              284.5,
-                              249.2,
-                              305.2,
-                              286.1,
-                              347.7,
-                              278,
-                              240.3,
-                              212.4,
-                              237.1,
-                              253.2,
-                              186.1,
-                              153.6,
-                              168.5,
-                              140.9,
-                              86.9,
-                              49.4,
-                              24.7,
-                              64.8,
-                              114.4,
-                              137.4
-                            ],
+                            "values": start_load,
                             "text": "Page Start Load",
                             "line-color": "#007790",
                             "legend-item": {
@@ -676,48 +627,7 @@
                             }
                           },
                           {
-                            "values": [
-                              714.6,
-                              656.3,
-                              660.6,
-                              729.8,
-                              731.6,
-                              682.3,
-                              654.6,
-                              673.5,
-                              700.6,
-                              755.2,
-                              817.8,
-                              809.1,
-                              815.2,
-                              836.6,
-                              897.3,
-                              896.9,
-                              866.5,
-                              835.8,
-                              797.9,
-                              784.7,
-                              802.8,
-                              749.3,
-                              722.1,
-                              688.1,
-                              730.4,
-                              661.5,
-                              609.7,
-                              630.2,
-                              633,
-                              604.2,
-                              558.1,
-                              581.4,
-                              511.5,
-                              556.5,
-                              542.1,
-                              599.7,
-                              664.8,
-                              725.3,
-                              694.2,
-                              690.5
-                            ],
+                            "values": end_load,
                             "text": "Page End Load",
                             "line-color": "#009872",
                             "legend-item": {
@@ -740,48 +650,7 @@
                             }
                           },
                           {
-                            "values": [
-                              536.9,
-                              576.4,
-                              639.3,
-                              669.4,
-                              708.7,
-                              691.5,
-                              681.7,
-                              673,
-                              701.8,
-                              636.4,
-                              637.8,
-                              640.5,
-                              653.1,
-                              613.7,
-                              583.4,
-                              538,
-                              506.7,
-                              563.1,
-                              541.4,
-                              489.3,
-                              434.7,
-                              442.1,
-                              482.3,
-                              495.4,
-                              556.1,
-                              505.4,
-                              463.8,
-                              434.7,
-                              377.4,
-                              325.4,
-                              351.7,
-                              343.5,
-                              333.2,
-                              332,
-                              378.9,
-                              415.4,
-                              385,
-                              412.6,
-                              445.9,
-                              441.5
-                            ],
+                            "values": total_time,
                             "text": "Total Load Time",
                             "line-color": "#da534d",
                             "legend-item": {
